[payload-tracker] Scale down old payload tracker pods
Signed-off-by: Stephen Adams <stephen.adams@redhat.com>

--- a/data/services/insights/payload-tracker/deploy.yml
+++ b/data/services/insights/payload-tracker/deploy.yml
@@ -118,6 +118,8 @@ resourceTemplates:
     parameters:
       IMAGE_TAG: 87db306
       USE_REDIS: 'true'
+      MAX_REPLICAS: '0'
+      MIN_REPLICAS: '0'
   - namespace:
       $ref: /services/insights/payload-tracker/namespaces/payload-tracker-fedramp-stage.yml
     ref: b43322e99b89b0bb2e1a4c026aebebd4827067a9
