Add CLEANER_SUSPEND variable 'false' to deploy file

--- a/data/services/insights/payload-tracker/deploy.yml
+++ b/data/services/insights/payload-tracker/deploy.yml
@@ -69,6 +69,7 @@ resourceTemplates:
   parameters:
     CPU_LIMIT: '1'
     MEMORY_LIMIT: 1Gi
+    CLEANER_SUSPEND: 'false'
   targets:
   - namespace:
       $ref: /services/insights/payload-tracker/namespaces/payload-tracker-prod.yml
